--- a/page1.css
+++ b/page1.css
@@ -10,7 +10,18 @@ li{
     list-style: none
 }
 p {
-    margin-top: 150px;
+
     border: solid blue;
-    width
+    width: 421px;
+    height: 487px;
+}
+#body{
+    display:flex;
+    justify-content: space-around;
+}
+img{
+    margin-top: 15px;
+    height: 487px;
+    width: 487px;
+
 }
