--- a/page1.css
+++ b/page1.css
@@ -29,6 +29,7 @@ p {
     height: 487px;
     font-family: sans-serif;
 
+
 }
 #body{
     display:flex;
@@ -51,4 +52,7 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+#help,#helpme{
+    margin-top: 30px;
 }
