--- a/page1.css
+++ b/page1.css
@@ -53,55 +53,49 @@ p {
     display:flex;
     justify-content:space-between;
     font-size: 32px;
+     margin-top: 30px;
 }
 #beach{
     display:flex;
     justify-content:space-between;
     font-size: 32px;
+     margin-top: 30px;
 }
 #pine{
     display:flex;
     justify-content:space-between;
     font-size: 32px;
+     margin-top: 30px;
 }
 #berries{
     display:flex;
     justify-content:space-between;
     font-size: 32px;
+     margin-top: 30px;
 }
 #hall{
     display:flex;
     justify-content:space-between;
     font-size: 32px;
+     margin-top: 30px;
 }
 #tower{
     display:flex;
     justify-content:space-between;
     font-size: 32px;
+     margin-top: 30px;
 }
 #poetry{
     display: flex;
     flex-direction: column;
     align-items: center;
+     margin-top: 30px;
 }
-#help{
-    margin-top: 30px;
+#pictures{
+    display=flex
+    align-items: center
 }
-#helpme{
-    margin-top: 30px;
-}
-#helpful{
-    margin-top: 30px;
-}
-#helpless{
-    margin-top: 30px;
-}
-#selfhelp{
-    margin-top: 30px;
-}
-#idk{
-    margin-top: 30px;
-}
+
 /*Start of mobile*/
 @media only screen and (max-width: 700px){
     body{
