--- a/page1.css
+++ b/page1.css
@@ -1,19 +1,23 @@
 /*main page*/
+body{
+    background-color: #1465e8;
+}
 ul{
     display:flex;
     justify-content: space-around;
     width: 100%;
-    border:solid 1px blue;
+    border:solid 2px #c6dcff;
     font-family: sans-serif;
     font-size: 20px
 }
 h1{
     margin-top: 120px;
-    background-color: blue;
+    background-color: #c6dcff;
     width: 316px;
     height: 100px;
     font-family: sans-serif;
 }
+/*start of transition*/
 h1{
    font-size: 71pt;
     transition-property: font-size;
@@ -26,6 +30,7 @@ h1:hover {
     transition-duration: 4s;
     transition-delay: 0s;
 }
+/*end of transition*/
 #intro{
     display:flex;
     justify-content:space-between
@@ -36,7 +41,7 @@ li{
 }
 p {
 
-    border: solid blue;
+    border: solid #c6dcff;
     width: 421px;
     height: 487px;
     font-family: sans-serif;
@@ -64,6 +69,13 @@ p {
     font-size: 32px;
      margin-top: 30px;
 }
+#obelisk{
+    display:flex;
+    align-items: center;
+    justify-content:space-between;
+    font-size: 32px;
+     margin-top: 30px;
+}
 #pine{
     display:flex;
     align-items: center;
@@ -78,7 +90,7 @@ p {
     font-size: 32px;
      margin-top: 30px;
 }
-#hall{
+#cherry{
     display:flex;
     align-items: center;
     justify-content:space-between;
@@ -86,6 +98,20 @@ p {
      margin-top: 30px;
 }
 #tower{
+    display:flex;
+    align-items: center;
+    justify-content:space-between;
+    font-size: 32px;
+     margin-top: 30px;
+}
+#hall{
+    display:flex;
+    align-items: center;
+    justify-content:space-between;
+    font-size: 32px;
+     margin-top: 30px;
+}
+#taylor{
     display:flex;
     align-items: center;
     justify-content:space-between;
@@ -108,5 +134,14 @@ p {
         display:flex;
         align-items: center;
         flex-direction:column-reverse;
+    }
+    ul{
+       border:solid 2px #1465e8;
+    }
+    h1{
+        background-color: #1465e8;
+    }
+    p{
+        border: solid #1465e8;
     }
 }
